# obfuscate

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  rustfmt.toml
examples/: obfuscation.rs  stringify.rs
src/: bytes.rs  cfo.rs  hash.rs  lib.rs  murmur3.rs  pos.rs  wide.rs  words.rs  xref.rs
