[package]
name = "obfuscate"
version = "0.4.3"
edition = "2021"
license = "MIT"

authors = [
    "ellacrity <ellacrity@users.noreply.github.com>",
    "Casper <CasualX@users.noreply.github.com>",
]
description = "Compiletime string constant obfuscation for Rust"
documentation = "https://docs.rs/obfuscate"
repository = "https://github.com/ellacrityX/obfuscate"
readme = "README.md"
keywords = ["obfuscation", "hash", "random", "wide"]
categories = ["no-std"]
